sandc/test/fixtures/pbtRegression/shouldSucceed/overloading/methodOverloading/MethodOverloading.sand
pub class MethodOverloading {
    foo() {

    }
    
    foo(n: int) {

    }
}