sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/forBinding/flatTupleDuplicate/FlatTupleDuplicate.sand
pub class FlatTupleDuplictate {
    pub foo() {
        for (n, n) in 0..9 {
            
        }
    }
}